# PredictionMarkets

./: main.py  package-lock.json  run_simulation.sh
polaimarket/agent_evm_testnet/: hardhat-daemon.sh  polaimarket_testnet_deployer.py  pyproject.toml  setup_testnet.py  testnet_data.json  testnet_deployer.py
polaimarket/agent_evm_testnet/contracts/: AutoAdjustOrderBook.sol  EnvironmentBridge.sol  MinimalERC20.sol  OrderBook.sol  PredictionMarket.sol
polaimarket/agent_evm_testnet/hardhat-testnet/: hardhat.config.js  package-lock.json  package.json
polaimarket/agent_evm_testnet/hardhat-testnet/artifacts/contracts/AutoAdjustOrderBook.sol/: AutoAdjustOrderBook.json  IERC20.json
polaimarket/agent_evm_testnet/hardhat-testnet/artifacts/contracts/EnvironmentBridge.sol/: EnvironmentBridge.json
polaimarket/agent_evm_testnet/hardhat-testnet/artifacts/contracts/MarketFactory.sol/: MarketFactory.dbg.json  MarketFactory.json
polaimarket/agent_evm_testnet/hardhat-testnet/artifacts/contracts/MinimalERC20.sol/: MinimalERC20.dbg.json  MinimalERC20.json
polaimarket/agent_evm_testnet/hardhat-testnet/artifacts/contracts/OrderBook.sol/: IERC20.json  OrderBook.json
polaimarket/agent_evm_testnet/hardhat-testnet/artifacts/contracts/PredictionMarket.sol/: PredictionMarket.json
polaimarket/agent_evm_testnet/hardhat-testnet/cache/: solidity-files-cache.json  validations.json
polaimarket/agent_evm_testnet/hardhat-testnet/contracts/: MarketFactory.sol
research_agent_ui/: README.md  package-lock.json  requirements.txt  run.py  setup_project.py  start-app.sh
(+106 files in other folders)
