[tool.poetry]
name = "agent_eth_testnet"
version = "0.1.0"
description = ""
authors = ["C0deMunk33 <hollandcodeandgraphics@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^7.4.0"
py-solc-x = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
